# TypoFix

./: .gitignore  CLAUDE.md  Cargo.toml  build-installer.bat  build.bat  rustfmt.toml
.github/workflows/: ci.yml  real-os.yml
crates/typofix-core/: CLAUDE.md  Cargo.toml
crates/typofix-core/src/: buffer.rs  case.rs  detector.rs  dict.rs  engine.rs  exceptions.rs  freq.rs  layout_mapper.rs  lib.rs  lm.rs  replacer.rs  rules.rs  undo.rs
crates/typofix-core/tests/: caps_correction.rs  e2e_retype.rs  hotkeys_b1.rs  integration.rs  live_switch.rs  punct_letter_boundary.rs  recall_fn_repro.rs  recall_force_switch.rs  recall_freq_weighted.rs  recall_phonotactic_ext.rs  recall_plausible_nonword.rs  recall_short_service.rs  recall_user_forex.rs  recall_vesum.rs  secure_field.rs
crates/typofix-data/: Cargo.toml
crates/typofix-data/src/: eval.rs  lib.rs
crates/typofix-data/tests/: calibrate.rs
crates/typofix-platform/: Cargo.toml
crates/typofix-platform-macos/: Cargo.toml
crates/typofix-platform-macos/src/: lib.rs
crates/typofix-platform-virtual/: CLAUDE.md  Cargo.toml
crates/typofix-platform-virtual/src/: lib.rs
crates/typofix-platform-windows/: CLAUDE.md  Cargo.toml
crates/typofix-platform-windows/examples/: secure_synth.rs
crates/typofix-platform-windows/src/: hook.rs  inject.rs  keystate.rs  layout.rs  lib.rs  scancode.rs  secure.rs  secure_thread.rs  selection.rs  window.rs
crates/typofix-platform/src/: lib.rs
crates/typofix-replay/: Cargo.toml
crates/typofix-replay/src/: lib.rs
crates/typofix-replay/tests/: example_fixture.rs
data/: CLAUDE.md  NOTICE.md  clean_corpus.py  fetch_corpora.sh  fetch_dict_uk.py  fetch_freq.py
data/dicts/: en.short.txt  extensions.txt  iso4217.txt  uk.short.txt  user.txt
data/eval/: CLAUDE.md  dataset.jsonl  generate.py
data/layouts/: en.toml  uk.toml
data/samples/: en.corpus.txt  en.words.txt  uk.corpus.txt  uk.words.txt
docs/: ARCHITECTURE.md  CONCEPT.md  DEVELOPMENT_PLAN.md  IMPLEMENTATION_B.md  IMPLEMENTATION_LIVE_SWITCH.md  README.md  ROADMAP.md  TESTING_STRATEGY.md
fixtures/: CLAUDE.md  example_ghbdsn_uk.expected.jsonl  example_ghbdsn_uk.jsonl
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: live_engine.rs
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  feedback.rs  hotkeys.rs  lib.rs  main.rs  runtime.rs
ui/: index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
ui/e2e/: .gitignore  README.md  package-lock.json  package.json  wdio.conf.js
ui/e2e/specs/: settings.e2e.js
ui/src/: App.svelte  app.css  app.d.ts  i18n.js  main.js
ui/src/lib/: ProcessPicker.svelte  RuleList.svelte  Section.svelte  Toggle.svelte  api.js
