# ВІДОКРЕМЛЕНИЙ workspace. Порожня секція [workspace] нижче навмисна:
# вона ВІДВ'ЯЗУЄ цей крейт від кореневого бібліотечного workspace, щоб
# `cargo test --workspace` з кореня лишався швидким і не тягнув важкий
# GUI-тулчейн (Tauri/WebView2, frontend dist). Деталі — у src-tauri/CLAUDE.md.
[workspace]

[package]
name = "typofix-app"
version = "0.1.0"
description = "TypoFix — трей-застосунок (Tauri-оболонка над ядром розпізнавання)"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"

[lib]
# Tauri 2 будує логіку в бібліотеці (готовність до мобільних таргетів),
# а main.rs лише викликає run(). Ім'я з суфіксом _lib, щоб не конфліктувати з bin.
name = "typofix_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Перелік запущених процесів для пікера виключень (кросплатформно — стане у пригоді
# для майбутнього macOS-порту). Тягнемо лише модуль процесів (без CPU/RAM/дисків).
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
# Ядро + спільні типи + завантаження даних. Path-залежності на крейти КОРЕНЕВОГО
# workspace; це НЕ робить src-tauri його членом (ізоляція зберігається).
typofix-core = { path = "../crates/typofix-core" }
typofix-platform = { path = "../crates/typofix-platform" }
typofix-data = { path = "../crates/typofix-data" }

# Жива платформа лише на Windows. На інших цілях рантайм-цикл — no-op заглушка
# (macOS-порт у майбутньому), тож крейт сюди не тягнемо.
[target.'cfg(windows)'.dependencies]
typofix-platform-windows = { path = "../crates/typofix-platform-windows" }

[features]
# Дефолтна продакшн-конфігурація Tauri (custom protocol для вшитого фронтенду).
custom-protocol = ["tauri/custom-protocol"]
