# ВІДОКРЕМЛЕНИЙ workspace. Порожня секція [workspace] нижче навмисна:
# вона ВІДВ'ЯЗУЄ цей крейт від кореневого бібліотечного workspace, щоб
# `cargo test --workspace` з кореня лишався швидким і не тягнув важкий
# GUI-тулчейн (Tauri/WebView2, frontend dist). Деталі — у src-tauri/CLAUDE.md.
[workspace]

[package]
name = "typofix-app"
version = "0.1.0"
description = "TypoFix — трей-застосунок (Tauri-оболонка над ядром розпізнавання)"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"
# Головний бінар для `tauri build`/`cargo run` — трей-апка. Без цього при кількох
# [[bin]] Tauri бандлив би алфавітно перший (`live_engine` — демо-харнес).
# `live_engine` лишається доступним через `cargo run --bin live_engine`.
default-run = "typofix-app"

[lib]
# Tauri 2 будує логіку в бібліотеці (готовність до мобільних таргетів),
# а main.rs лише викликає run(). Ім'я з суфіксом _lib, щоб не конфліктувати з bin.
name = "typofix_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
# Глобальні гарячі клавіші (B1): реєстрація системних хоткеїв із конфіга.
tauri-plugin-global-shortcut = "2"
# Автозапуск разом із ОС (B5): керує записом у реєстрі (Windows Run-ключ) /
# LaunchAgent (macOS). Стан автозапуску — джерело істини сам плагін, НЕ settings.json.
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Перелік запущених процесів для пікера виключень (кросплатформно — стане у пригоді
# для майбутнього macOS-порту). Тягнемо лише модуль процесів (без CPU/RAM/дисків).
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
# Кодування PNG-іконки у base64 data-URL для передачі у webview.
base64 = "0.22"
# Ядро + спільні типи + завантаження даних. Path-залежності на крейти КОРЕНЕВОГО
# workspace; це НЕ робить src-tauri його членом (ізоляція зберігається).
typofix-core = { path = "../crates/typofix-core" }
typofix-platform = { path = "../crates/typofix-platform" }
typofix-data = { path = "../crates/typofix-data" }

# Жива платформа лише на Windows. На інших цілях рантайм-цикл — no-op заглушка
# (macOS-порт у майбутньому), тож крейт сюди не тягнемо.
[target.'cfg(windows)'.dependencies]
typofix-platform-windows = { path = "../crates/typofix-platform-windows" }
# Витяг іконки exe напряму через Win32 (SHGetFileInfo → HICON → DIB → PNG). Версія
# 0.59 — та сама, що в typofix-platform-windows (без дубля у дереві). macOS-витяг — згодом.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    # PlaySound (winmm) для звуку при перемиканні (B2).
    "Win32_Media_Audio",
] }
# PNG-кодування RGBA-буфера іконки (вже в дереві через tauri image-png — без дубля).
image = { version = "0.25", default-features = false, features = ["png"] }

[features]
# Дефолтна продакшн-конфігурація Tauri (custom protocol для вшитого фронтенду).
custom-protocol = ["tauri/custom-protocol"]
