[package]
name = "typofix-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Чиста детермінована логіка рішень TypoFix: step(state, event, ctx) -> actions."

[dependencies]
typofix-platform.workspace = true
# FST-словник (dict). serde — лише derive для серіалізації n-gram моделі (lm);
# це чисті дані, не IO, тож не порушує правил чистоти core.
fst.workspace = true
serde = { workspace = true }

[dev-dependencies]
typofix-platform-virtual.workspace = true
# Лише для E2E-тестів: завантажити зразкові розкладки/LM/словники.
typofix-data.workspace = true

[lints]
workspace = true
