[package]
name = "typofix-data"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Завантаження/ембед розкладок, LM і словників для TypoFix. Поки заглушка."

[dependencies]
typofix-core.workspace = true
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
