[package]
name = "typofix-platform-macos"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Реалізація Platform для macOS (CGEventTap, CGEventPost, TIS). Поки заглушка."

[dependencies]
typofix-platform.workspace = true

[lints]
workspace = true
