[package]
name = "typofix-platform-virtual"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Віртуальна (in-memory) реалізація Platform для автономних E2E-тестів TypoFix."

[dependencies]
typofix-platform.workspace = true

[lints]
workspace = true
