[package]
name = "typofix-platform-windows"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Реалізація Platform для Windows (хук, ін'єкція, розкладка). Поки заглушка."

[dependencies]
typofix-platform.workspace = true

[lints]
workspace = true
