[package]
name = "typofix-platform"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Авторитетні спільні типи (KeyEvent, InputEvent, Action, …) та trait Platform для TypoFix."

[dependencies]
bitflags.workspace = true

[lints]
workspace = true
