[package]
name = "typofix-platform"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Авторитетні спільні типи (KeyEvent, InputEvent, Action, …) та trait Platform для TypoFix."

[dependencies]
bitflags.workspace = true
# ОПЦІЙНО: serde вмикається лише фічею `serde`. Дефолтна збірка цього крейту
# (і всіх, хто залежить від нього без фічі) лишається без serde — нічого не
# змінюється для інших воркерів. Фічу вмикає `typofix-replay`.
serde = { workspace = true, optional = true }

[features]
# Вмикає derive(Serialize/Deserialize) на спільних типах (для record/replay).
serde = ["dep:serde"]

[lints]
workspace = true
