[package]
name = "typofix-replay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Запис/відтворення сесій і golden-фікстури (*.jsonl) для TypoFix. Поки заглушка."

[dependencies]
typofix-platform.workspace = true

[lints]
workspace = true
